DeepLearningParser.py
# Generated from DeepLearning.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class DeepLearningParser ( Parser ):

    grammarFileName = "DeepLearning.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'else'", "'for'", "'while'", 
                     "'do'", "'in'", "'def'", "'return'", "'matrix'", "'model'", 
                     "'MLP'", "'train'", "'predict'", "'plot'", "'read'", 
                     "'sqrt'", "'pow'", "'abs'", "'exp'", "'log'", "'sin'", 
                     "'cos'", "'tan'", "'arcsin'", "'arccos'", "'arctan'", 
                     "'mean'", "'std'", "'sum'", "'max'", "'min'", "'transpose'", 
                     "'inverse'", "'dot'", "'zeros'", "'ones'", "'identity'", 
                     "'determinant'", "'reshape'", "'read_file'", "'write_file'", 
                     "'read_csv'", "'write_csv'", "'save_model'", "'load_model'", 
                     "'sigmoid'", "'relu'", "'tanh'", "'softmax'", "'leaky_relu'", 
                     "'mse'", "'cross_entropy'", "'mae'", "'print'", "'len'", 
                     "'range'", "'type'", "'shape'", "'normalize'", "'split_data'", 
                     "'kmeans'", "'knn_classifier'", "'decision_tree'", 
                     "'neural_network'", "'add_layer'", "'compile'", "'fit'", 
                     "'evaluate'", "'create_mlp'", "'linear_regression'", 
                     "'predict_linear'", "'r2_score'", "'scatter'", "'histogram'", 
                     "'plot_loss'", "'show'", "'+'", "'-'", "'*'", "'/'", 
                     "'^'", "'%'", "'='", "'('", "')'", "'{'", "'}'", "'['", 
                     "']'", "','", "';'", "'.'", "':'", "'<='", "'>='", 
                     "'=='", "'!='", "'<'", "'>'" ]

    symbolicNames = [ "<INVALID>", "IF", "ELSE", "FOR", "WHILE", "DO", "IN", 
                      "DEF", "RETURN", "MATRIX", "MODEL", "MLP", "TRAIN", 
                      "PREDICT", "PLOT", "READ", "SQRT", "POW_FUNC", "ABS", 
                      "EXP", "LOG", "SIN", "COS", "TAN", "ARCSIN", "ARCCOS", 
                      "ARCTAN", "MEAN", "STD", "SUM", "MAX", "MIN", "TRANSPOSE", 
                      "INVERSE", "DOT_KW", "ZEROS", "ONES", "IDENTITY", 
                      "DETERMINANT", "RESHAPE", "READ_FILE", "WRITE_FILE", 
                      "READ_CSV", "WRITE_CSV", "SAVE_MODEL", "LOAD_MODEL", 
                      "SIGMOID", "RELU", "TANH_FUNC", "SOFTMAX", "LEAKY_RELU", 
                      "MSE", "CROSS_ENTROPY", "MAE", "PRINT", "LEN", "RANGE", 
                      "TYPE", "SHAPE", "NORMALIZE", "SPLIT_DATA", "KMEANS", 
                      "KNN_CLASSIFIER", "DECISION_TREE", "NEURAL_NETWORK", 
                      "ADD_LAYER", "COMPILE", "FIT", "EVALUATE", "CREATE_MLP", 
                      "LINEAR_REGRESSION", "PREDICT_LINEAR", "R2_SCORE", 
                      "SCATTER", "HISTOGRAM", "PLOT_LOSS", "SHOW", "PLUS", 
                      "MINUS", "MULT", "DIV", "POW", "MOD", "ASSIGN", "LPAREN", 
                      "RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", 
                      "COMMA", "SEMI", "DOT", "COLON", "LE", "GE", "EQ", 
                      "NEQ", "LT", "GT", "ID", "NUMBER", "STRING", "LINE_COMMENT", 
                      "BLOCK_COMMENT", "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_assignment = 2
    RULE_assignNoSemi = 3
    RULE_matrixDecl = 4
    RULE_matrixLiteral = 5
    RULE_row = 6
    RULE_modelDecl = 7
    RULE_mlpDecl = 8
    RULE_funcCallExpr = 9
    RULE_printStmt = 10
    RULE_args = 11
    RULE_ifStmt = 12
    RULE_forStmt = 13
    RULE_whileStmt = 14
    RULE_doWhileStmt = 15
    RULE_funcDecl = 16
    RULE_params = 17
    RULE_returnStmt = 18
    RULE_block = 19
    RULE_expr = 20
    RULE_equalityExpr = 21
    RULE_relationalExpr = 22
    RULE_addExpr = 23
    RULE_mulExpr = 24
    RULE_powExpr = 25
    RULE_unaryExpr = 26
    RULE_primary = 27
    RULE_arrayLiteral = 28

    ruleNames =  [ "program", "statement", "assignment", "assignNoSemi", 
                   "matrixDecl", "matrixLiteral", "row", "modelDecl", "mlpDecl", 
                   "funcCallExpr", "printStmt", "args", "ifStmt", "forStmt", 
                   "whileStmt", "doWhileStmt", "funcDecl", "params", "returnStmt", 
                   "block", "expr", "equalityExpr", "relationalExpr", "addExpr", 
                   "mulExpr", "powExpr", "unaryExpr", "primary", "arrayLiteral" ]

    EOF = Token.EOF
    IF=1
    ELSE=2
    FOR=3
    WHILE=4
    DO=5
    IN=6
    DEF=7
    RETURN=8
    MATRIX=9
    MODEL=10
    MLP=11
    TRAIN=12
    PREDICT=13
    PLOT=14
    READ=15
    SQRT=16
    POW_FUNC=17
    ABS=18
    EXP=19
    LOG=20
    SIN=21
    COS=22
    TAN=23
    ARCSIN=24
    ARCCOS=25
    ARCTAN=26
    MEAN=27
    STD=28
    SUM=29
    MAX=30
    MIN=31
    TRANSPOSE=32
    INVERSE=33
    DOT_KW=34
    ZEROS=35
    ONES=36
    IDENTITY=37
    DETERMINANT=38
    RESHAPE=39
    READ_FILE=40
    WRITE_FILE=41
    READ_CSV=42
    WRITE_CSV=43
    SAVE_MODEL=44
    LOAD_MODEL=45
    SIGMOID=46
    RELU=47
    TANH_FUNC=48
    SOFTMAX=49
    LEAKY_RELU=50
    MSE=51
    CROSS_ENTROPY=52
    MAE=53
    PRINT=54
    LEN=55
    RANGE=56
    TYPE=57
    SHAPE=58
    NORMALIZE=59
    SPLIT_DATA=60
    KMEANS=61
    KNN_CLASSIFIER=62
    DECISION_TREE=63
    NEURAL_NETWORK=64
    ADD_LAYER=65
    COMPILE=66
    FIT=67
    EVALUATE=68
    CREATE_MLP=69
    LINEAR_REGRESSION=70
    PREDICT_LINEAR=71
    R2_SCORE=72
    SCATTER=73
    HISTOGRAM=74
    PLOT_LOSS=75
    SHOW=76
    PLUS=77
    MINUS=78
    MULT=79
    DIV=80
    POW=81
    MOD=82
    ASSIGN=83
    LPAREN=84
    RPAREN=85
    LBRACE=86
    RBRACE=87
    LBRACK=88
    RBRACK=89
    COMMA=90
    SEMI=91
    DOT=92
    COLON=93
    LE=94
    GE=95
    EQ=96
    NEQ=97
    LT=98
    GT=99
    ID=100
    NUMBER=101
    STRING=102
    LINE_COMMENT=103
    BLOCK_COMMENT=104
    WS=105

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(DeepLearningParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DeepLearningParser.StatementContext)
            else:
                return self.getTypedRuleContext(DeepLearningParser.StatementContext,i)


        def getRuleIndex(self):
            return DeepLearningParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = DeepLearningParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DeepLearningParser.IF) | (1 << DeepLearningParser.FOR) | (1 << DeepLearningParser.WHILE) | (1 << DeepLearningParser.DO) | (1 << DeepLearningParser.DEF) | (1 << DeepLearningParser.RETURN) | (1 << DeepLearningParser.MATRIX) | (1 << DeepLearningParser.MODEL) | (1 << DeepLearningParser.PRINT))) != 0) or _la==DeepLearningParser.LBRACE or _la==DeepLearningParser.ID:
                self.state = 58
                self.statement()
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 64
            self.match(DeepLearningParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(DeepLearningParser.AssignmentContext,0)


        def matrixDecl(self):
            return self.getTypedRuleContext(DeepLearningParser.MatrixDeclContext,0)


        def modelDecl(self):
            return self.getTypedRuleContext(DeepLearningParser.ModelDeclContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(DeepLearningParser.IfStmtContext,0)


        def forStmt(self):
            return self.getTypedRuleContext(DeepLearningParser.ForStmtContext,0)


        def printStmt(self):
            return self.getTypedRuleContext(DeepLearningParser.PrintStmtContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(DeepLearningParser.WhileStmtContext,0)


        def doWhileStmt(self):
            return self.getTypedRuleContext(DeepLearningParser.DoWhileStmtContext,0)


        def funcDecl(self):
            return self.getTypedRuleContext(DeepLearningParser.FuncDeclContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(DeepLearningParser.ReturnStmtContext,0)


        def block(self):
            return self.getTypedRuleContext(DeepLearningParser.BlockContext,0)


        def getRuleIndex(self):
            return DeepLearningParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = DeepLearningParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 77
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [DeepLearningParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 66
                self.assignment()
                pass
            elif token in [DeepLearningParser.MATRIX]:
                self.enterOuterAlt(localctx, 2)
                self.state = 67
                self.matrixDecl()
                pass
            elif token in [DeepLearningParser.MODEL]:
                self.enterOuterAlt(localctx, 3)
                self.state = 68
                self.modelDecl()
                pass
            elif token in [DeepLearningParser.IF]:
                self.enterOuterAlt(localctx, 4)
                self.state = 69
                self.ifStmt()
                pass
            elif token in [DeepLearningParser.FOR]:
                self.enterOuterAlt(localctx, 5)
                self.state = 70
                self.forStmt()
                pass
            elif token in [DeepLearningParser.PRINT]:
                self.enterOuterAlt(localctx, 6)
                self.state = 71
                self.printStmt()
                pass
            elif token in [DeepLearningParser.WHILE]:
                self.enterOuterAlt(localctx, 7)
                self.state = 72
                self.whileStmt()
                pass
            elif token in [DeepLearningParser.DO]:
                self.enterOuterAlt(localctx, 8)
                self.state = 73
                self.doWhileStmt()
                pass
            elif token in [DeepLearningParser.DEF]:
                self.enterOuterAlt(localctx, 9)
                self.state = 74
                self.funcDecl()
                pass
            elif token in [DeepLearningParser.RETURN]:
                self.enterOuterAlt(localctx, 10)
                self.state = 75
                self.returnStmt()
                pass
            elif token in [DeepLearningParser.LBRACE]:
                self.enterOuterAlt(localctx, 11)
                self.state = 76
                self.block()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(DeepLearningParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(DeepLearningParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(DeepLearningParser.ExprContext,0)


        def SEMI(self):
            return self.getToken(DeepLearningParser.SEMI, 0)

        def getRuleIndex(self):
            return DeepLearningParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = DeepLearningParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(DeepLearningParser.ID)
            self.state = 80
            self.match(DeepLearningParser.ASSIGN)
            self.state = 81
            self.expr()
            self.state = 82
            self.match(DeepLearningParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignNoSemiContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(DeepLearningParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(DeepLearningParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(DeepLearningParser.ExprContext,0)


        def getRuleIndex(self):
            return DeepLearningParser.RULE_assignNoSemi

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignNoSemi" ):
                listener.enterAssignNoSemi(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignNoSemi" ):
                listener.exitAssignNoSemi(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignNoSemi" ):
                return visitor.visitAssignNoSemi(self)
            else:
                return visitor.visitChildren(self)




    def assignNoSemi(self):

        localctx = DeepLearningParser.AssignNoSemiContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_assignNoSemi)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(DeepLearningParser.ID)
            self.state = 85
            self.match(DeepLearningParser.ASSIGN)
            self.state = 86
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MatrixDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MATRIX(self):
            return self.getToken(DeepLearningParser.MATRIX, 0)

        def ID(self):
            return self.getToken(DeepLearningParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(DeepLearningParser.ASSIGN, 0)

        def matrixLiteral(self):
            return self.getTypedRuleContext(DeepLearningParser.MatrixLiteralContext,0)


        def SEMI(self):
            return self.getToken(DeepLearningParser.SEMI, 0)

        def getRuleIndex(self):
            return DeepLearningParser.RULE_matrixDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMatrixDecl" ):
                listener.enterMatrixDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMatrixDecl" ):
                listener.exitMatrixDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMatrixDecl" ):
                return visitor.visitMatrixDecl(self)
            else:
                return visitor.visitChildren(self)




    def matrixDecl(self):

        localctx = DeepLearningParser.MatrixDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_matrixDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(DeepLearningParser.MATRIX)
            self.state = 89
            self.match(DeepLearningParser.ID)
            self.state = 90
            self.match(DeepLearningParser.ASSIGN)
            self.state = 91
            self.matrixLiteral()
            self.state = 92
            self.match(DeepLearningParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MatrixLiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACK(self):
            return self.getToken(DeepLearningParser.LBRACK, 0)

        def row(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DeepLearningParser.RowContext)
            else:
                return self.getTypedRuleContext(DeepLearningParser.RowContext,i)


        def RBRACK(self):
            return self.getToken(DeepLearningParser.RBRACK, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(DeepLearningParser.COMMA)
            else:
                return self.getToken(DeepLearningParser.COMMA, i)

        def getRuleIndex(self):
            return DeepLearningParser.RULE_matrixLiteral

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMatrixLiteral" ):
                listener.enterMatrixLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMatrixLiteral" ):
                listener.exitMatrixLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMatrixLiteral" ):
                return visitor.visitMatrixLiteral(self)
            else:
                return visitor.visitChildren(self)




    def matrixLiteral(self):

        localctx = DeepLearningParser.MatrixLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_matrixLiteral)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(DeepLearningParser.LBRACK)
            self.state = 95
            self.row()
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DeepLearningParser.COMMA:
                self.state = 96
                self.match(DeepLearningParser.COMMA)
                self.state = 97
                self.row()
                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 103
            self.match(DeepLearningParser.RBRACK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RowContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACK(self):
            return self.getToken(DeepLearningParser.LBRACK, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DeepLearningParser.ExprContext)
            else:
                return self.getTypedRuleContext(DeepLearningParser.ExprContext,i)


        def RBRACK(self):
            return self.getToken(DeepLearningParser.RBRACK, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(DeepLearningParser.COMMA)
            else:
                return self.getToken(DeepLearningParser.COMMA, i)

        def getRuleIndex(self):
            return DeepLearningParser.RULE_row

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRow" ):
                listener.enterRow(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRow" ):
                listener.exitRow(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRow" ):
                return visitor.visitRow(self)
            else:
                return visitor.visitChildren(self)




    def row(self):

        localctx = DeepLearningParser.RowContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_row)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(DeepLearningParser.LBRACK)
            self.state = 106
            self.expr()
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DeepLearningParser.COMMA:
                self.state = 107
                self.match(DeepLearningParser.COMMA)
                self.state = 108
                self.expr()
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 114
            self.match(DeepLearningParser.RBRACK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModelDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MODEL(self):
            return self.getToken(DeepLearningParser.MODEL, 0)

        def ID(self):
            return self.getToken(DeepLearningParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(DeepLearningParser.ASSIGN, 0)

        def mlpDecl(self):
            return self.getTypedRuleContext(DeepLearningParser.MlpDeclContext,0)


        def SEMI(self):
            return self.getToken(DeepLearningParser.SEMI, 0)

        def getRuleIndex(self):
            return DeepLearningParser.RULE_modelDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModelDecl" ):
                listener.enterModelDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModelDecl" ):
                listener.exitModelDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModelDecl" ):
                return visitor.visitModelDecl(self)
            else:
                return visitor.visitChildren(self)




    def modelDecl(self):

        localctx = DeepLearningParser.ModelDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_modelDecl)
        try:
            self.state = 125
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 116
                self.match(DeepLearningParser.MODEL)
                self.state = 117
                self.match(DeepLearningParser.ID)
                self.state = 118
                self.match(DeepLearningParser.ASSIGN)
                self.state = 119
                self.mlpDecl()
                self.state = 120
                self.match(DeepLearningParser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 122
                self.match(DeepLearningParser.MODEL)
                self.state = 123
                self.match(DeepLearningParser.ID)
                self.state = 124
                self.match(DeepLearningParser.SEMI)
                pass

